More documentation and cleaning up.

--- a/tinytroupe/prompts/interaction_results_extractor.mustache
+++ b/tinytroupe/prompts/interaction_results_extractor.mustache
@@ -33,6 +33,12 @@ On your output format:
   - <KEY_1>, <KEY_2>, ... <KEY_n> **must** be the following: {{fields}}  
   {{/fields}}
 
+  {{#fields_hints}}
+    - Additional contraint for field `{{0}}`: {{1}}
+  {{/fields_hints}}
+
+
+
 ## Examples
 
 ### Example 1
