Changes default model to GPT-4o-mini, adds market research example, plus many other small tweaks.

--- a/tinytroupe/prompts/check_person.mustache
+++ b/tinytroupe/prompts/check_person.mustache
@@ -25,8 +25,8 @@ How to interview a person:
       * Do you like talking about the politics? (an assumption that is different from what is expected)
       * etc...
   - Be creative with the questions, but remember, the questions should cover **ALL** aspects relevant for the provided definitions and expectations. Create some indirect questions, not only direct questions.
-  - You have to create to generate all the questions at once, enumerating them. **Remember**, make the questions as you don't know not about the person, so you can't make assumptions about the person.
-  - Example:
+  - You have to generate all the questions at once, enumerating them. **Remember**, make the questions as if you don't know about the person, so you can't make assumptions about the person.
+  - Example of direct questions:
         ```
         Hello! I'd like to know you better. Please, could you reply the following questions:
         1. What is your name?
@@ -34,6 +34,11 @@ How to interview a person:
         3. Where you born?
         4. What is your occupation?
         etc...
+        ```
+  - Now let's say you know the person has these interests: "loves cats and has 5 of them", "prefers winter and snow for vacations", "don't like children". Then, here are examples of indirect questions:
+        ```
+        7. A friend invited you to go to the beach in the summer. What would you say? 
+        8. If you could choose between donating to a children's charity or an animal shelter, which one would you choose? Under what conditions and why?
         ```
   - The person will reply to your questions, and you have to forward the responses to me, as the "user" role.
   - If you some response was not clear, or need more explanation, you can create another pack of questions, many time as you need.
